--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,51 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+img{
+  max-height: 100%;
+}
+input, textarea ,select{
+  @apply border border-gray-200 rounded-sm px-1 py-2 w-full;
+  @apply mb-2 ;
+}
+input:focus, textarea:focus select:focus{
+  @apply border-blue-900;
+}
+h1{
+  @apply text-gray-800 mb-4 text-xl
+}
+label{
+  @apply text-gray-600 
+}
+.btn-primary{
+  @apply bg-primary text-white px-4 py-1 rounded-sm
+}
+table.basic{
+  @apply w-full bg-white rounded-sm shadow-md
+}
+table.basic tr td{
+  @apply px-4 py-1;
+}
+table.basic thead tr td{
+  @apply text-sm text-gray-600 uppercase border-b border-gray-200 px-4 py-1;
+}
+table.basic a{
+  @apply  text-sm py-1 px-2 rounded-md inline-flex gap-1 mx-1;
+}
+.btn-default, .btn-red{
+  @apply px-4 py-1 rounded-md
+}
+.btn-red{
+  @apply bg-red-500 text-white
+}
+.btn-default{
+  @apply bg-white text-gray-800 px-4 py-1 rounded-md border border-gray-200
+  shadow-sm
+}
+.inputfile {
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
